--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ img{
     margin-right: 30px;
     float: left;
     right: 100px;
-    border:  5px solid rgb(126, 126, 126);
+   
     padding: 2px 2px;
 }
 
@@ -24,8 +24,8 @@ p{
     padding: 20px;
     
 }
-body{
-    background-color: rgb(230, 226, 223);
+header {
+    background-color: #b9cbbe;
 }
 
 .list-size1{
